force-app/main/default/objects/CPQ_MSP_Overage__c/CPQ_MSP_Overage__c.object-meta.xml
<CustomObject>
    <description>SOX object - Stores details about MSP Consumption quoting. MSP Consumption quoting is deprecated but we have orders active probably till 2028 and we need to support them with this field</description>
    <label>MSP Overage</label>
    <nameField>
        <displayFormat>MSP-{0000}</displayFormat>
        <label>MSP Overage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MSP Overage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>