force-app/main/default/objects/CPQ_MSP_Overage__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will store the lookup to the account record</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>MSP Overage</relationshipLabel>
    <relationshipName>MSP_Overage</relationshipName>
    <type>Lookup</type>
</CustomField>