force-app/main/default/objects/CPQ_MSP_Overage__c/fields/Application_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Application_Serial_Number__c</fullName>
    <label>Application Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>