force-app/main/default/objects/CPQ_MSP_Overage__c/fields/Cluster_Id__c.field-meta.xml
<CustomField>
    <fullName>Cluster_Id__c</fullName>
    <label>Cluster Id</label>
    <type>TextArea</type>
</CustomField>