force-app/main/default/objects/CPQ_MSP_Overage__c/fields/Cluster_Usage_in_TB__c.field-meta.xml
<CustomField>
    <fullName>Cluster_Usage_in_TB__c</fullName>
    <label>Cluster Usage (in TB)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>