force-app/main/default/objects/CPQ_MSP_Overage__c/fields/Contract_Price_GIG__c.field-meta.xml
<CustomField>
    <fullName>Contract_Price_GIG__c</fullName>
    <label>Contract Price GIG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>