force-app/main/default/objects/CPQ_MSP_Overage__c/fields/Disti_Account__c.field-meta.xml
<CustomField>
    <fullName>Disti_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Disti Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>MSP Overage (Disti Account)</relationshipLabel>
    <relationshipName>MSP_Overage1</relationshipName>
    <type>Lookup</type>
</CustomField>