force-app/main/default/objects/CPQ_MSP_Overage__c/fields/Entitlement_Id__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Id__c</fullName>
    <description>MSP1.1 : SW only SKUs</description>
    <label>Entitlement Id</label>
    <type>TextArea</type>
</CustomField>