force-app/main/default/objects/CPQ_MSP_Overage__c/fields/Initial_Contract_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Contract_Date__c</fullName>
    <label>Initial Contract Date</label>
    <type>Date</type>
</CustomField>