force-app/main/default/objects/CPQ_MSP_Overage__c/fields/Initial_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Initial_Order_Number__c</fullName>
    <label>Initial Order Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>