force-app/main/default/objects/CPQ_MSP_Overage__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is a lookup to the order</description>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>MSP Overage</relationshipLabel>
    <relationshipName>MSP_Overage</relationshipName>
    <type>Lookup</type>
</CustomField>