force-app/main/default/objects/CPQ_MSP_Overage__c/fields/Overage_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Overage_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Overage Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>MSP Overage</relationshipLabel>
    <relationshipName>MSP_Overage</relationshipName>
    <type>Lookup</type>
</CustomField>