force-app/main/default/objects/CPQ_MSP_Overage__c/fields/Overage_Order__c.field-meta.xml
<CustomField>
    <fullName>Overage_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Overage Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>MSP Overage (Overage Order)</relationshipLabel>
    <relationshipName>MSP_Overage1</relationshipName>
    <type>Lookup</type>
</CustomField>