force-app/main/default/objects/CPQ_MSP_Overage__c/fields/Period_Name__c.field-meta.xml
<CustomField>
    <fullName>Period_Name__c</fullName>
    <label>Period Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>