force-app/main/default/objects/CPQ_MSP_Overage__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is a lookup to the Product record</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>MSP Overage</relationshipLabel>
    <relationshipName>MSP_Overage</relationshipName>
    <type>Lookup</type>
</CustomField>