force-app/main/default/objects/CPQ_MSP_Overage__c/fields/Usage_Type__c.field-meta.xml
<CustomField>
    <fullName>Usage_Type__c</fullName>
    <label>Usage Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Min</fullName>
            </value>
            <value>
                <fullName>Overage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>