force-app/main/default/objects/CPQ_MSP_Overage__c/listViews/This_Month_data.listView-meta.xml
<ListView>
    <fullName>This_Month_data</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Cluster_Id__c</columns>
    <columns>Application_Serial_Number__c</columns>
    <columns>Entitlement_Id__c</columns>
    <columns>Usage_Type__c</columns>
    <columns>Usage_in_TB__c</columns>
    <columns>Cluster_Usage_in_TB__c</columns>
    <columns>Contract_Price_GIG__c</columns>
    <columns>Order__c</columns>
    <columns>Initial_Order_Number__c</columns>
    <columns>Period_Start_Date__c</columns>
    <columns>Period_End_Date__c</columns>
    <columns>Overage_Order__c</columns>
    <columns>Overage_Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>This Month data</label>
</ListView>