force-app/main/default/objects/CPQ_MSP_Overage__c/listViews/TODAY.listView-meta.xml
<ListView>
    <fullName>TODAY</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>PO_Number__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Cluster_Id__c</columns>
    <columns>Entitlement_Id__c</columns>
    <columns>Order__c</columns>
    <columns>Product__c</columns>
    <columns>Usage_Type__c</columns>
    <columns>Usage_in_TB__c</columns>
    <columns>Cluster_Usage_in_TB__c</columns>
    <columns>Application_Serial_Number__c</columns>
    <columns>Overage_Opportunity__c</columns>
    <columns>Overage_Order__c</columns>
    <columns>Contract_Price_GIG__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>TODAY</label>
</ListView>